# odinmcp

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  setup.sh
.conf.example/bifrost/: config.yml
.conf.example/heimdall/: asgard-realm.json
.conf.example/hermod/: pushpin.conf  routes
.conf.example/postgres-db/: create-initial-databases.sh
.github/workflows/: pypi-release.yml
asgard/: README.md  docker-compose.yml
asgard/.conf.example/bifrost/: config.yml
asgard/.conf.example/heimdall/: asgard-realm.json
asgard/.conf.example/hermod/: pushpin.conf  routes
asgard/heimdall/: Dockerfile  README.md
asgard/hermod/: Readme.md
bifrost/: README.md
heimdall/: .dockerignore  Dockerfile
loki/: README.md
odin/: __init__.py  conftest.py  main.py  requirements.txt  startup.sh  test.txt
odin/core/: config.py
odin/models/: user.py
odin/monitors/: logging.ini  logging.py
odin/odinmcp/: __init__.py  config.py  constants.py  main.py  odinmcp.py  session.py  web.py  worker.py
odin/odinmcp/middleware/: heimdall.py  hermod.py
odin/odinmcp/models/: auth.py  user.py
odin/odinmcp/server/: constants.py  odinmcp.py  settings.py  sse.py
odin/odinmcp/web/: __init__.py  controller.py  main.py
odin/odinmcp/worker/: __init__.py  main.py  session.py
odin/web/: app.py
odin/web/middlewares/: heimdall.py  hermod.py
src/: main.py
src/odinmcp/: __init__.py  config.py  constants.py  main.py
src/odinmcp/cli/: main.py
src/odinmcp/web/: main.py  (+1 more)
src/worker/: __init__.py
test/: Dockerfile  startup.sh
test_app/: .dockerignore  main.py
(+20 files in other folders)
